# Password-Manager-Local

./: .bandit.yaml  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  2FA_IMPLEMENTATION_SUMMARY.md  =5.0.0  BETA_TESTER_GUIDE.md  BROWSER_EXTENSION_HOW_TO.md  BUILD.bat  BUILD_GUIDE.md  CHANGELOG.md  CICD_GUIDE.md  CODE_ANALYSIS_REPORT.md  CODE_ENHANCEMENTS.md  COMPREHENSIVE_DOCUMENTATION.md  CONFIGURATION_GUIDE.md  CONFIGURATION_SETUP_COMPLETE.md  CSV_IMPORT_ENHANCEMENT.md  DATABASE_VIEWER_GUIDE.md  DELETE_FEATURE_GUIDE.md  Database_Changes_Documentation.md  Detailed_Implementation_Plan_21Sept2025.md  ENHANCED_FEATURES_GUIDE.md  ENHANCEMENTS_IMPLEMENTED.md  ERROR_HANDLING_COMPLETE.md  ERROR_HANDLING_GUIDE.md  ERROR_HANDLING_INTEGRATION_SUMMARY.md  FEATURE_ROADMAP.md  FEATURE_SUMMARY.md  HOW_TO_VIEW_ORIGINAL_PASSWORD.md  IMPLEMENTATION_PLAN.md  IMPORT_IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALL.md  LINTING_GUIDE.md  LINTING_SETUP_COMPLETE.md  LOGOUT_FUNCTIONALITY.md  MASTER_PASSWORD_FOR_DELETE.md  MOBILE_APP_HOW_TO.md  (+48 more)
.github/workflows/: docs.yml
Code Explanations/: Authentication.txt  Database Layer.txt  Encryption System.txt  Password Generation.txt
backups/: .gitkeep
config/: __init__.py  default.py  development.py  production.py
data/: .gitkeep  login_preferences.json
distribution/: QUICK_START.txt  README.txt
distribution/data/: info.txt
documentation/: README.md
documentation/source/: conf.py  index.rst
documentation/source/api/: core.rst  gui.rst  utils.rst
documentation/source/developer/: architecture.rst  contributing.rst  deployment.rst  testing.rst
documentation/source/user-guide/: browser-extension.rst  getting-started.rst  import-export.rst  installation.rst  managing-passwords.rst  settings.rst
src/: __init__.py
src/core/: auth.py  config.py  database.py  database_migrations.py  encryption.py  error_handlers.py  exceptions.py  import_export.py  logging_config.py  password_cache.py  password_manager.py  performance_monitor.py  security_audit_logger.py  service_integration.py  settings_service.py  totp_service.py  types.py  view_auth_service.py
src/gui/: __init__.py  enhanced_password_list.py  error_dialog.py  export_dialog.py  first_time_setup.py  login_window.py  main_window.py  main_window_enhanced.py  password_health.py  password_view_dialog.py  settings_window.py  themes.py  twofa_setup_dialog.py
src/gui/components/: __init__.py  backup_manager.py  password_generator.py  strength_checker.py
src/utils/: font_manager.py  import_export.py  password_age.py  password_generator.py  strength_checker.py
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: add_password.html  backup.html  base.html  dashboard.html  edit_password.html  generate_password.html  login.html  password_health.html  register.html  search_results.html
src/web/templates/errors/: 404.html  500.html
tests/: __init__.py  test_password_manager.py  test_web_interface.py
